@@ -1,0 +1,11 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x10 0x20 0x30 0x40 0x50 0x60 0x70 0x80} foo.data } */
+
+/* { dg-command { .file foo.data } } */
+/* { dg-command { .mem bar } } */
+/* { dg-command { .ios #0 } } */
+/* { dg-command { get_ios } } */
+/* { dg-output "0" } */
+/* { dg-command { .ios #1 } } */
+/* { dg-command { get_ios } } */
+/* { dg-output "\n1" } */
