@@ -1,3 +1,14 @@
+2020-02-03  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* src/pk-ios.c (ios_cmd): Define.
+	(pk_cmd_ios): New function.
+	(pk_cmd_file): Do not accept tag arguments.
+	(pk_cmd_mem): Likewise.
+	* src/pk-cmd.c (ios_cmd): Define.
+	(dot_cmds): Add ios_cmd.
+	* doc/poke.texi (ios command): New chapter.
+	* testsuite/poke.pkl/ios-1.pk: New test.
+
 2020-02-03  Egeyar Bagcioglu  <egeyar@gmail.com>
 
 	* pickles/ctf.pk: Correct the filename on the first line of the file.
